[package]
name = "lyra"
readme = "../README.md"
description = "A featureful, self-hostable Discord music bot."
version = "0.6.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/lyra-music/lyra"
authors = ["fdnt7"]
build = "build.rs"

[build-dependencies]
vergen = { version = "8.3.1", features = [
    "build",
    "cargo",
    "git",
    "gitoxide",
    "rustc",
    "si",
] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
significant_drop_tightening = { level = "allow", priority = 1 }
module_name_repetitions = "allow"

[dependencies]
lyra_proc = { path = "./lyra_proc" }

const-str = "0.5.7"
const_panic = { version = "0.2.8", features = ["derive"] }
heck = "0.5.0"
bitflags = "2.5.0"
unicode-segmentation = "1.11.0"
dashmap = "5.5.3"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
thiserror = "1.0.60"
color-eyre = "0.6.3"
rstest = "0.19.0"
futures = "0.3.30"
tokio = { version = "1.37.0", features = [
    "sync",
    "signal",
    "rt-multi-thread",
    "macros",
] }
serde = "1.0.197"
serde_json = "1.0.115"
regex = "1.10.4"
linkify = "0.10.0"
fuzzy-matcher = "0.3.7"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
itertools = "0.12.1"
rayon = "1.10.0"
lazy_static = "1.4.0"
chrono = "0.4.38"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
mixbox = "2.0.0"
lavalink-rs = { version = "0.11.0", features = ["twilight16"] }
aho-corasick = "1.1.3"

twilight = "=0.16.0-rc.1"
twilight-cache-inmemory = { version = "=0.16.0-rc.1", features = [
    "permission-calculator",
] }
twilight-gateway = "=0.16.0-rc.1"
twilight-http = "=0.16.0-rc.1"
twilight-model = "=0.16.0-rc.1"
twilight-standby = "=0.16.0-rc.1"
twilight-validate = "=0.16.0-rc.1"
twilight-mention = "=0.16.0-rc.1"
twilight-util = { version = "=0.16.0-rc.1", features = [
    "permission-calculator",
    "builder",
] }
twilight-interactions = { git = "https://github.com/fdnt7/twilight-interactions", rev = "82b707f" }

[dependencies.kmeans_colors]
version = "0.6.0"
features = ["palette_color"]
default-features = false

[dependencies.image]
version = "0.25.1"
features = ["jpeg", "png", "gif", "tiff"]
default-features = false

[dependencies.palette]
version = "0.7.6"
features = ["std"]
default-features = false

[profile.dev.package.sqlx-macros]
opt-level = 3
