[package]
name = "lyra"
readme = "../README.md"
description = "A featureful, self-hostable Discord music bot."
version = "0.8.1"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/lyra-music/lyra"
authors = ["fdnt7"]
build = "build.rs"

[build-dependencies]
anyhow = "1"
vergen-git2 = { version = "1.0.1", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[lints.rust]
unsafe_op_in_unsafe_fn = "forbid"
# dead_code = "allow"

[lints.clippy]
multiple_unsafe_ops_per_block = "forbid"
undocumented_unsafe_blocks = "forbid"
enum_glob_use = "forbid"
unwrap_used = "forbid"
try_err = "forbid"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
lyra_proc = { path = "../lyra_proc" }
lyra_ext = { path = "../lyra_ext" }

paste = "1.0.15"
const-str = "0.5.7"
const_panic = { version = "0.2.9", features = ["derive"] }
bitflags = "2.6.0"
dashmap = "6.1.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
thiserror = "1.0.63"
color-eyre = "0.6.3"
futures = "0.3.30"
tokio = { version = "1.40.0", features = [
    "sync",
    "signal",
    "rt-multi-thread",
    "macros",
] }
serde = "1.0.210"
serde_json = "1.0.128"
regex = "1.10.6"
linkify = "0.10.0"
fuzzy-matcher = "0.3.7"
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"
itertools = "0.13.0"
rayon = "1.10.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
mixbox = "2.0.0"
lavalink-rs = { git = "https://github.com/lyra-music/lavalink-rs", branch = "lyra", features = [
    "twilight16",
] }
aho-corasick = "1.1.3"

twilight = { git = "https://github.com/lyra-music/twilight", branch = "lyra" }
twilight-cache-inmemory = { git = "https://github.com/lyra-music/twilight", branch = "lyra", features = [
    "permission-calculator",
] }
twilight-gateway = { git = "https://github.com/lyra-music/twilight", branch = "lyra" }
twilight-http = { git = "https://github.com/lyra-music/twilight", branch = "lyra" }
twilight-model = { git = "https://github.com/lyra-music/twilight", branch = "lyra" }
twilight-standby = { git = "https://github.com/lyra-music/twilight", branch = "lyra" }
twilight-validate = { git = "https://github.com/lyra-music/twilight", branch = "lyra" }
twilight-mention = { git = "https://github.com/lyra-music/twilight", branch = "lyra" }
twilight-util = { git = "https://github.com/lyra-music/twilight", branch = "lyra", features = [
    "permission-calculator",
    "builder",
] }
twilight-interactions = { git = "https://github.com/lyra-music/twilight-interactions", branch = "lyra" }
reqwest = "0.12.7"
moka = { version = "0.12.8", features = ["future"] }
