[package]
name = "lyra"
readme = "../README.md"
description = "A featureful, self-hostable Discord music bot."
version = "0.9.1"
edition = "2024"
# When bumping, bump in other Cargo.toml files, Dockerfile too
rust-version = "1.87"
license = "GPL-3.0"
repository = "https://github.com/lyra-music/lyra"
authors = ["fdnt7"]
build = "build.rs"

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "forbid"
unwrap_used = "forbid"
try_err = "forbid"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
lyra_proc = { path = "../lyra_proc" }
lyra_ext = { path = "../lyra_ext" }

paste = "1.0.15"
const-str = "0.6.2"
const_panic = { version = "0.2.12", features = ["derive"] }
bitflags = "2.9.1"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
thiserror = "2.0.12"
color-eyre = "0.6.5"
futures = "0.3.31"
tokio = { version = "1.45.1", features = [
    "sync",
    "signal",
    "rt-multi-thread",
    "macros",
] }
serde = "1.0.219"
serde_json = "1.0.140"
regex = "1.11.1"
linkify = "0.10.0"
fuzzy-matcher = "0.3.7"
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.9.1"
itertools = "0.14.0"
rayon = "1.10.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
] }
mixbox = "2.0.0"
lavalink-rs = { version = "0.14.1", default-features = false, features = [
    "macros",
    "websockets-rustls-native-roots",
    "twilight",
] }
aho-corasick = "1.1.3"

twilight = { version = "0.16.0" }
twilight-cache-inmemory = { version = "0.16.0", features = [
    "permission-calculator",
] }
twilight-gateway = { version = "0.16.0", default-features = false, features = [
    "rustls-native-roots",
    "rustls-aws_lc_rs",
    "twilight-http",
    "zlib-stock",
] }
twilight-http = { version = "0.16.0", default-features = false, features = [
    "decompression",
    "rustls-native-roots",
    "rustls-aws_lc_rs",
] }
twilight-model = { version = "0.16.0" }
twilight-standby = { version = "0.16.0" }
twilight-validate = { version = "0.16.0" }
twilight-mention = { version = "0.16.0" }
twilight-util = { version = "0.16.0", features = [
    "permission-calculator",
    "builder",
] }
twilight-interactions = { version = "0.16.2" }
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.20", default-features = false, features = [
    "charset",
    "rustls-tls-native-roots",
] }
rustls = "0.23.28"
derive_builder = "0.20.2"
