[package]
name = "lyra_ext"
version = "0.9.0-alpha.4"
rust-version = "1.86"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
multiple_unsafe_ops_per_block = "forbid"
undocumented_unsafe_blocks = "forbid"
enum_glob_use = "forbid"
unwrap_used = "forbid"
try_err = "forbid"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
rstest = "0.25.0"
heck = "0.5.0"
const-str = "0.6.2"
unicode-segmentation = "1"
bitflags = "2"
regex = "1"
rayon = "1"
mock_instant = "0.5.3"
thiserror = "2"

[dependencies.kmeans_colors]
version = "0.7.0"
features = ["palette_color"]
default-features = false

[dependencies.image]
version = "0.25.6"
features = ["jpeg", "png", "gif", "tiff"]
default-features = false

[dependencies.palette]
version = "0.7.6"
features = ["std"]
default-features = false

[dependencies.time]
version = "0.3.41"
features = ["formatting"]
default-features = false
