[package]
name = "lyra_proc"
version = "0.9.0-rc.3"
rust-version = "1.87"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "forbid"
unwrap_used = "forbid"
try_err = "forbid"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
syn = "2"
quote = "1"
serde = "1"
itertools = "*"
heck = "*"
toml = "*"
