[package]
name = "lyra_proc"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
heck.workspace = true
itertools.workspace = true
serde.workspace = true
syn = "2"
quote = "1"
toml = "0"
