[package]
name = "lyra_proc"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dependencies]
syn = "2.0.51"
quote = "1.0.35"
itertools = "0.12.1"
heck = "0.4.1"
